--- a/.myemacs.d/my-configs/my-init.org
+++ b/.myemacs.d/my-configs/my-init.org
@@ -3,6 +3,16 @@
 #+BABEL: :cache yes
 #+PROPERTY: header-args :tangle yes
 
+* TODO This entire setup
+  - [ ] finish figuring out what packages i need, full-stop.
+    - [ ] company and auto-complete for every lang
+    - [ ] lang packages themselves
+    - [ ] utilities such as pdf tools
+    - [ ] visual packages like themes and fci
+  - [ ] Set up each mode in its subsection with its proper configuration as required by each package!!!
+    - [ ] remember to check the githubs of each package more or less
+    - [ ] steal plenty from spacemacs configs
+
 * my-init
   configurations for my emacs. these configs are opinionated and probably bad, use at your own 
   hazard.
@@ -55,18 +65,102 @@
      always use =use-package= for loading up packages due to its lazy nature. this means emacs doesn't
      load something until it actually needs it, saving us a lot of time and some RAM by cutting boot
      times and pre-loading things when we might never use them.
-** TODO Packages
 
-*** the basics
+** TODO the basics
+    
+*** defaults 
+**** packages
+
+     #+BEGIN_SRC emacs-lisp
+     (let* ((package--builtins nil)
+            (packages
+             '(
+               ;; utilities
+               general which-key ivy swiper counsel fill-column-indicator volatile-highlights
+               golden-ratio undo-tree ace-window paredit projectile diminish rainbow-delimiters
+               bookmark 
+
+
+               ;; auto-complete
+               company flycheck hippie-exp yasnippet auto-yasnippet flycheck-irony company-c-headers
+               eldoc elisp-slime-nav company-math company-auctex company-jedi company-web-html
+               company-web-jade company-web-slim slime-company company-ycmd
+
+
+               
+
+
+               ;; git
+               git-gutter-fringe magit
+
+               ;; markdown
+               markdown-mode
+
+               ;; c/cpp
+               cc-mode clang-format cmake-mode
+
+               ;; rust
+               cargo company racer rust-mode
+               
+               ;; haskell
+
+               ;; python
+
+               ;; js
+
+               ;; webprogramming
+               css-mode haml-mode sass-mode scss-mode slim-mode web-mode less-css-mode pug-mode emmet-mode
+
+
+
+               ;; ruby
+
+               )))
+       (let ((packages (remove-if 'package-installed-p packages)))
+         (when packages
+           ;; Install uninstalled packages
+           (package-refresh-contents)
+           (mapc 'package-install packages))))
+     #+END_SRC
+
+**** general settings
+     
+     #+BEGIN_SRC emacs-lisp
+     
+     #+END_SRC
+*** navigation
     core major/minor modes that i need for my emacs config. these are not particular to languages
     and are more focused on navigation, utility, and look.
 
     #+BEGIN_SRC emacs-lisp
-    (use-package ivy :ensure t
-    :diminish (ivy-mode . "")
-    :init (ivy-mode t))
+
+
+
+    #+END_SRC
+*** global keybindings
+
+    #+BEGIN_SRC emacs-lisp
+
     #+END_SRC
 
+*** utilities
+
+**** pdfs
+
+*** org
+
+*** visual
+
+** TODO Languages
+*** python
+*** cl
+*** emacs-lisp
+*** clojure
+*** latex-mode
+*** c/c++
+*** webprogramming
+*** js
+*** haskell
 ** Can I load other org files from here?
    #+BEGIN_SRC emacs-lisp
    (find-file  "/home/spook/.myemacs.d/my-configs/test.org")
